--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1 class="header">My To-Do List</h1>
     <div class="container">
+      <h6>ToDo List is empty</h6>
       <ul id="my-list"></ul>
       <input type="button" value="Add To-do" onclick="toggleForm()" />
     </div>
